Remove wrong credentials from .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Abner Terribili
-	email = abner.terribili@gmail.com
+	name = your name here
+	email = your email here 
 
 [alias]
 	ci = commit
